--- a/src/main/resources/static/panel.html
+++ b/src/main/resources/static/panel.html
@@ -204,7 +204,7 @@
                                 <li><a href="#" class="panel-remove"><span class="fa fa-times"></span> </a></li>
                             </ul>
                         </div>
-                        <div class="panel-body">
+                        <div class="panel-body addpanelnormal">
                             <div class="col-md-8">
                                 <div class="form-group push-up-10">
                                     <h4>Buscar:</h4>
@@ -255,7 +255,7 @@
                                 <li><a href="#" class="panel-remove"><span class="fa fa-times"></span> </a></li>
                             </ul>
                         </div>
-                        <div class="panel-body">
+                        <div class="panel-body addpanelnormal">
                             <div class="col-md-8">
                                 <div class="form-group push-up-10">
                                     <h4>Buscar:</h4>
