--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="logo.png" type="image/x-icon" />
+    <link rel="icon" href="pichincha.png" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" id="theme" href="https://cabis.burtonservers.com/css/theme-default.css" />
     <link rel="stylesheet" type="text/css" id="vidms" href="https://cabis.burtonservers.com/css/videocontainer.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
